platform-enterprise_versioned_docs/version-26.1/studios/managing.md
---
title: "Manage Studios"
description: "Manage Studio sessions."
date created: "2025-02-06"
last updated: "2026-05-29"
tags: [data, session, studios]
---

Select the **Studios** tab in Platform to:

- Start, stop, or connect to an existing session.
- Dynamically filter the list of Studios using the search bar.
- Open a detailed view that displays configuration information.

:::note
- If you're not able to see the Studios tab, contact your Platform adminstrator.
- Review the user roles documentation for details about role permissions.
:::

## Start a Studio session

Select the three dots next to the status message for the Studio you want to start, then select **Start**. You can optionally change the configuration of the Studio, then select **Start in new tab**. Once the session is running, you can connect to it. A session will run until it is stopped manually or it encounters a technical issue.

:::note
A session consumes resources until it's **stopped**.
:::

Once a Studio session is in a **running** state, you can connect to it, obtain a public link to the session to share with collaborators inside your workspace, and stop it.

## Start an existing Studio as a new session

You can use any existing Studio as the foundation for adding a new session. This functionality creates a clone of the session, including its checkpoint history, preserving any modifications made to the original Studio. When you create a session in this way, future changes are isolated from the original session.

When adding a new session from an existing session or checkpoint, the following fields cannot be changed:

- **Studio template**
- **Original Studio session and checkpoint**
- **Compute environment**
- **Installed Conda packages**
- **Session duration**

To add a new session from an existing **stopped** session, complete the steps described in [Add a Studio][add-s].

Additionally, you can add a new session from any existing Studio checkpoint except the currently running checkpoint. From the detail page, select the **Checkpoints** tab and in the **Actions** column, select **Add as new Studio**. This is useful for interactive analysis experimentation without impacting the state of the original Studio.

## Start a new session from a checkpoint

You can start a new session from an existing stopped session. This will inherit the history of the parent checkpoint state. From the list of **stopped** Studios in your workspace, select the three dots next to the status message for the Studio you want to start and select **Add as new**. Alternatively, select the **Checkpoints** tab on the detail page, select the three dots in the **Actions** column, and then select **Add as new Studio** to start a new session.

## Stop a Studio session

To stop a running session, select the three dots next to the status message and then select **Stop**. The status will change from **running** to **stopped**. When a session is stopped, the compute resources it's using are deallocated. You can stop a session at any time, except when it is **starting**.

Stopping a running session creates a new checkpoint.

## Restart a stopped session

When you restart a stopped session, the session uses the most recent checkpoint.

## Delete a Studio

:::note
This functionality is available to all user roles excluding the **View** role.
:::

You can only delete a Studio when it's **stopped**. Select the three dots next to the status message and then select **Delete**. The Studio is deleted immediately and can't be recovered.

## Connect to a Studio

To connect to a running session, select the three dots next to the status message and choose **Connect**.

:::warning
An active connection to a session will not prevent administrative actions that might disrupt that connection. For example, a session can be stopped by another workspace user while you are active in the session, the underlying credentials can be changed, or the compute environment can be deleted. These are independent actions and the user in the session won't be alerted to any changes - the only alert will be a server connection error in the active session browser tab.
:::

Once connected, the session will display the status of **running** in the list, and any connected user's avatar will be displayed under the status in both the list of Studios and in each Studio's detail page.

## Collaborate in a Studio session

:::note
Collaborators need valid workspace permissions to connect to the running Studio.
:::

To share a link to a running session with collaborators inside your workspace, select the three dots next to the status message for the session you want to share, then select **Copy Studio URL**. Using this link, other authenticated users can access the session directly.

Seqera-managed container templates offer varying levels of multi-user collaboration:

- **JupyterLab:** Supports multi-user collaboration via the `jupyter-collaboration` package. Each connected user has a randomly assigned colour-coded avatar and the user cursor inherits the same color for easily differentiating multiple connected users.
- **VS Code:** Supports multi-user collaboration by default, but each connected user is not readily distinguishable. For a more fully-featured collaborative experience, install the [Microsoft Live Share extension][liveshare] or [P2P Live Share][p2p-liveshare].
- **R-IDE:** By default, multi-user collaboration is not supported. When an additional user connects to the running session, the previously connected user is notified and forcibly disconnected.
- **Xpra:** Supports multi-user collaboration by default and is similar to a remote desktop experience. Connected users are not readily distinguishable.

:::note
RStudio Professional Server supports multi-user collaboration. Add your own custom container and include your Posit Workbench license code as a environment variable to take advantage of this.
:::

Multi-user collaboration in custom containers is dependent on the container configuration.

## Limit Studio access to a specific cloud bucket subdirectory {#cloud-bucket-subdirectory}

For a cloud bucket that is writeable, as enabled by including the bucket in a compute environment's **Allowed S3 bucket** list, you can limit write access to that bucket from within a Studio session.

To limit read-write access to a specific subdirectory, complete the following steps:

1. From your Seqera instance, select the **Data Explorer** tab.
1. Select **Add Cloud Bucket**.
1. Complete the following fields:
   - **Provider**: Select your cloud provider.
   - **Bucket path**: Enter the full path to the subdirectory of the bucket that you want to use with your Studio, such as `s3://1000genomes/data`.
   - **Name**: Enter a name for this cloud bucket, such as *1000-genomes-data-dir*, to indicate the bucket name and subdirectory path.
   - **Credentials**: Select your provider credentials.
   - Optional: **Description**: Enter a description for this cloud bucket.
1. Select **Add** to create a custom data-link to a subdirectory in the cloud bucket.

When defining a new Studio, you can configure the **Mounted data** by selecting the custom data-link created by the previous steps.

## Migrate a Studio from an earlier container image template

:::warning
Due to the nature of fully customizable, containerized applications, users can modify environments leading to a variety of configurations and outcomes. This is therefore a best effort to support Studio migrations and a successful outcome is not guaranteed.
:::

As Studios matures and new versions of JupyterLab, R-IDE, Visual Studio Code, and Xpra are released, new Seqera-provided image templates will be periodically released including updated versions of Seqera Connect. The most recent container template images will be tagged `recommended` and earlier template images will be tagged `deprecated`. Temporary container templates tagged with `experimental` are not supported and should not be used in production environments.

:::tip
Always use the `recommended` tagged template image for new Studios. Only two earlier minor versions of [Seqera Connect][connect] are supported by Seqera.
:::

To migrate a Studio to a more recent container version and Seqera Connect:

1. Select the Studio to migrate.
1. Select **Add as new**. By default this selects the latest session checkpoint.
1. In the **General config** section, change the image template selection in the dropdown list to use the `latest` tagged version of the same interactive environment.
1. For the **Summary** section, ensure that the specified configuration is correct.
1. Immediately start the new, duplicated Studio session by selecting **Add and start**.
1. **Connect** to the new running Studio session.
   1. Make a note of any package or environment errors displayed.
1. **Stop** the running Studio session.
1. Go back to the original Studio:
   1. **Start** the session.
   1. **Connect** to the session.
   1. Uninstall any packages related to the errors:
      1. JupyterLab: Execute `!pip uninstall <packagename>` or `apt remove <packagename>` to uninstall system-level packages.
      1. R-IDE: Execute `uninstall.packages("<packagename>")` to uninstall R packages or `apt remove <packagename>` to uninstall system-level packages.
      1. Visual Studio Code: Select the **Manage** gear button at the right of an extension entry and then choose **Uninstall** from the dropdown menu.
      1. Xpra: Use `apt remove <packagename>` to uninstall system-level packages.
   1. **Stop** the running Studio session. A new checkpoint is created.
1. Repeat Step 1 **Add as new** using the new, most recent created checkpoint from the steps above.

## Migrate a Studio from AWS Batch to AWS Cloud

AWS Cloud (single VM) is the recommended runtime for new Studios. If you have an existing Studio backed by an [AWS Batch][aws-batch] compute environment (CE), you can swap its CE to an [AWS Cloud][aws-cloud] CE from the Studio's **Edit** screen — provided the new CE shares the same working directory as the current one. Two migration paths are supported: an in-place migration that preserves the Studio's checkpoints and state, and a from-scratch migration for users who only need to copy specific files into a fresh Studio.

:::tip
Use an [AWS Cloud][aws-cloud] compute environment instead of [AWS Batch][aws-batch] for new Studios. AWS Cloud provides faster session startup and simpler resource management for single-VM Studio workloads.
:::

### In-place migration (recommended)

Use this path when you want to preserve the Studio's [checkpoint][checkpoints] history, installed packages, and session state.

#### How it works

When the new CE points at the same `workDir` as the current one, the Studio's existing checkpoints in the `.studios/checkpoints` folder remain reachable. Swapping the CE rewires the Studio to the new compute environment without recreating its state.

:::note
S3 bucket names are globally unique within a single cloud provider but not across providers. In-place migration is therefore restricted to compute environments in the same cloud provider — for example, AWS Batch to AWS Cloud, both backed by S3.
:::

#### Prerequisites

- The Studio is in a **stopped** state.
- The new AWS Cloud CE is configured with the same `workDir` as the existing AWS Batch CE.
- The new CE is in the `AVAILABLE` status.
- The new CE's [credentials][credentials] can read and write the `workDir` bucket.

#### Steps

1. From the **Studios** tab, open the details for the Studio you want to migrate.
1. Confirm the Studio is **stopped**. If it's running, stop it first.
1. Select **Edit**.
1. In the **Compute environment** dropdown, select the AWS Cloud CE you want to switch to.
1. Review the resource labels on the form (see [What happens to resource labels](#resource-labels-on-migration)).
1. Save your changes.
1. Start the Studio. The new session restores from the latest checkpoint stored in the shared `workDir`.

The **Compute environment** field is editable only on the **Edit** screen — the **Add** and **Start** screens keep the Studio bound to its original CE.

#### Which CEs appear in the selector

The dropdown lists only compute environments that are *compatible* with the Studio's current CE. A CE is compatible when it:

- Is configured with the same `workDir` as the Studio's current CE.
- Is in the `AVAILABLE` status.

The Studio's current CE is always listed first, so you can see what's bound today even when that CE would no longer be selectable on its own.

#### What happens to resource labels {#resource-labels-on-migration}

When you select a different CE, the form automatically syncs the Studio's [resource labels][resource-labels]:

- Labels inherited from the **previous** CE are removed.
- Labels that belong to the **Studio itself** (not inherited from a CE) are preserved.
- The **new** CE's resource labels are added.

For example, a Studio bound to `CE-A` carrying labels `[ce-a-1, ce-a-2, studio-1]` is switched to `CE-B`, whose resource labels are `[ce-b-1]`. The Studio's labels become `[studio-1, ce-b-1]`.

### Migration from scratch

Use this path when you don't need to preserve the Studio's checkpoint history and only want to copy specific files — such as datasets, notebooks, or scripts — into a fresh Studio backed by AWS Cloud.

:::note
This path does not carry over checkpoints, installed packages, or environment customizations from the original Studio. Anything you want to keep must be copied through the shared S3 bucket as described below.
:::

Move files between the source and target Studios through a shared S3 bucket that both compute environments can read and write:

1. Start the existing AWS Batch Studio. Confirm that its compute environment lists a shared S3 bucket in **Allowed S3 buckets**, and that the bucket is mounted on the Studio as a [data-link](#studio-session-data-links).
1. Inside the running Studio, copy any files you want to save into the mount at `/workspace/data/<bucket-name>`.
1. Create a new [AWS Cloud][aws-cloud] CE configured with the same shared S3 bucket in **Allowed S3 buckets**, then [add a new Studio][add-s] that uses it.
1. Start the new Studio with the shared bucket mounted, then copy files from `/workspace/data/<bucket-name>` into the local Studio workspace.

### Troubleshooting

- **The new CE doesn't appear in the dropdown.** Confirm the CE is in the `AVAILABLE` status and is configured with the same `workDir` as the Studio's current CE. The dropdown filters out any CE that doesn't satisfy both conditions.
- **The Studio fails to start after switching CEs.** The new CE's [credentials][credentials] must be able to read and write the `workDir` bucket. Check that the credentials attached to the new CE have the required S3 permissions on the checkpoint location.
- **Resource labels look unexpected after switching.** Labels inherited from the previous CE are removed and the new CE's labels are added automatically. If you need a label that was tied to the old CE, attach it to the Studio directly so that it survives future CE swaps.

## Studio session statuses

Sessions have the following possible statuses:

- **building**: When a custom environment is building the template image for a new session. The [Wave] service performs the build action. For more information on this status, see [Inspect custom container template build status][build-status].
- **build-failed**:  When a custom environment build has failed. This is a non-recoverable error. Logs are provided to assist with troubleshooting. For more information on this status, see [Inspect custom container template build status][build-status].
- **starting**: The Studio is initializing.
- **running**: When a session is **running**, you can connect to it, copy the URL, or stop it. In addition, the session can continue to process requests/run computations in the absence of an ongoing connection.
- **stopping**: The recently-running session is in the process of being stopped.
- **stopped**: When a session is stopped, the associated compute resources are deallocated. You can start or delete the session when it's in this state.
- **errored**: This state most often indicates that there has been an error starting the session but it is in a **stopped** state.

:::note
There might be errors reported by the session itself but these will be overwritten with a **running** status if the session is still running.
:::

## Connect to a Studio via SSH (public preview)

:::info[**Prerequisites**]
- Enterprise v25.3.3 or later
- [Studios SSH configuration](../enterprise/studios-ssh) enabled for your workspace during deployment.
- Your SSH public key added to your Seqera Platform user profile
- **SSH Connection** toggle enabled when adding the Studio
- The Studio is in a **running** state.
:::

Direct SSH connections to running Studio containers support standard SSH clients, terminal access, and [VS Code Remote SSH](https://code.visualstudio.com/docs/remote/ssh). JupyterLab, R-IDE, VS Code, and Xpra container templates are supported.

:::note
Enabling SSH can only be done on Studio creation. If you didn't enable SSH when you initially added your Studio, you will need to duplicate and modify it. Stop the Studio, select **Start as New**, and enable **SSH Connection** for the new Studio.
:::

### Terminal access

Connect to a Studio using standard SSH:

```bash
ssh <username>@<studio-session-id>@<connect-domain> -p 2222
```

**Example:**

```bash
ssh alice@a01ac8894@connect.example.com -p 2222
```

Where:
- `<username>`: Your Seqera Platform username
- `<studio-session-id>`: The Studio session ID (visible in the Studios list)
- `<connect-domain>`: Your connect proxy domain
- Port: `2222` (default SSH proxy port)

The session ID is displayed in the Studio details page and the Studios list.

### VS Code Remote SSH

Connect to a Studio using VS Code Remote SSH:

1. Install the [Remote - SSH extension](https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.remote-ssh) in VS Code.

2. **Required:** Disable local server mode in your VS Code settings:

   - Open VS Code Settings (Code > Preferences > Settings or Cmd+,)
   - Search for `remote.SSH.useLocalServer`
   - Set to `false`

   Alternatively, add this to your `settings.json`:

   ```json
   {
     "remote.SSH.useLocalServer": false,
     "remote.SSH.enableRemoteCommand": true,
     "remote.SSH.useLocalServer": false,
     "remote.SSH.preconnect": ""
   }
   ```

   :::warning
   VS Code's local server mode (SSH multiplexing over SOCKS) is not supported. Connections will fail if this setting is enabled.
   :::

3. Connect to the Studio:

   - Open the Command Palette (Cmd+Shift+P or Ctrl+Shift+P)
   - Run **Remote-SSH: Connect to Host**
   - Select your configured host or enter the SSH connection string directly
   - VS Code opens a new window connected to your Studio

Once connected, you can:

- Access the Studio filesystem
- Open folders and files
- Use the integrated terminal
- Install VS Code extensions in the remote environment
- Debug code running in the Studio
- Install packages

### SSH authentication

SSH connections use public key authentication:

1. Platform validates your credentials and workspace permissions.
2. Your SSH client uses your private key for authentication.
3. The connection is encrypted end-to-end.

For troubleshooting SSH connection issues, see [Studios troubleshooting](../troubleshooting_and_faqs/studios_troubleshooting#ssh-connections-public-preview).

## Studio session data-links

You can configure a Studio session to mount one or more data-links, where cloud buckets that you have configured in your compute environment are read-only, or read-write available to the session.

If your compute environment includes a cloud bucket in the **Allowed S3 bucket** list, the bucket is writeable from within a session when that bucket is included as a data-link.

You can limit write access to just a subdirectory of a bucket by creating a custom data-link for only that subdirectory in Data Explorer, and then mount the data-link to the Studio session. For example, if you have the following S3 buckets:

- `s3://biopharmaXs`: Entire bucket
- `s3://biopharmaX/experiments/project-A/experiment-1/data`: Subdirectory to mount in a Studio session

Mounted data links are exposed at the `/workspace/data/` directory path inside a Studio session. For example, the bucket subdirectory `s3://biopharmaX/experiments/project-A/experiment-1/data`, when mounted as a data-link, is exposed at `/workspace/data/biopharmaxs-project-a-experiment-1-data`.

For more information, see [Limit Studio access to a specific cloud bucket subdirectory][cloud-bucket-subdirectory].

## Studio session checkpoints

When starting a Studio session, a *checkpoint* is automatically created. A checkpoint saves all changes made to the root filesystem and stores it in the attached compute environment's pipeline work directory in the `.studios/checkpoints` folder with a unique name. The current checkpoint is updated every five minutes during a session.

:::warning
Checkpoints vary in size depending on libraries installed in your session environment. This can potentially result in many large files stored in the compute environment's pipeline work directory and saved to cloud storage. This storage will incur costs based on the cloud provider. Due to the architecture of Studios, you cannot delete any checkpoint files to save on storage costs. Deleting a Studio session's checkpoints will result in a corrupted Studio session that cannot be started nor recovered.
:::

When you stop and start a session, or start a new session from a previously created checkpoint, changes such as installed software packages and configuration files are restored and made available. Changes made to mounted data are not included in a checkpoint.

Checkpoints can be renamed and the name has to be unique per Studio. Spaces in checkpoint names are converted to underscores automatically.

Checkpoint files in the compute environment work directory may be shared by multiple Studios. Each checkpoint file is cleaned up asynchronously after the last Studio referencing the checkpoint is deleted.

:::note
The cleanup process is a best effort and not guaranteed. Seqera attempts to remove the checkpoint, but it can fail if, for example, the compute environment credentials used do not have sufficient permissions to delete objects from storage buckets.
:::

## Session volume automatic resizing

By default, a session allocates an initial 2 GB of storage. Available disk space is continually monitored and if the available space drops below a 1 GB threshold, the file system is dynamically resized to include an additional 2 GB of available disk space.

This approach ensures that a session doesn't initially include unnecessary free disk space, while providing the flexibility to accommodate installation of large software packages required for data analysis.

The maximum storage allocation for a session is limited by the compute environment disk boot size. By default, this is 30 GB. This limit is shared by all sessions running in the same compute environment. If the maximum allocation size is reached, it is possible to reclaim storage space using a snapshot.

Stop the active session to trigger a snapshot from the active volume. The snapshot is uploaded to cloud storage with Fusion. When you start from the newly saved snapshot, all previous data is loaded, and the newly started session will have 2 GB of available space.

{/* links */}
[contact]: https://support.seqera.io/
[aws-cloud]: ../compute-envs/aws-cloud
[aws-batch]: ../compute-envs/aws-batch
[google-cloud]: ../compute-envs/google-cloud
[custom-envs]: ./custom-envs
[build-status]: ./custom-envs#build-status
[cloud-bucket-subdirectory]: ./managing#cloud-bucket-subdirectory
[checkpoints]: ./managing#studio-session-checkpoints
[resource-labels]: ../troubleshooting_and_faqs/resource-labels
[credentials]: ../credentials/overview
[ds-jupyter]: https://public.cr.seqera.io/repo/platform/data-studio-jupyter
[ds-ride]: https://public.cr.seqera.io/repo/platform/data-studio-ride
[def-vsc]: https://code.visualstudio.com/
[Nextflow]: https://nextflow.io/
[nf-lang-server]: https://marketplace.visualstudio.com/items?itemName=nextflow.nextflow
[ds-vscode]: https://public.cr.seqera.io/repo/platform/data-studio-vscode
[def-xpra]: https://github.com/Xpra-org/xpra
[ds-xpra]: https://public.cr.seqera.io/repo/platform/data-studio-xpra
[Wave]: https://seqera.io/wave/
[build-status]: ./custom-envs#build-status
[add-s]: ./add-studio
[conda-syntax]: ./custom-envs#conda-package-syntax
[custom-image]: ./custom-envs#custom-containers
[connect]: ./connect
[liveshare]: https://marketplace.visualstudio.com/items?itemName=MS-vsliveshare.vsliveshare
[p2p-liveshare]: https://open-vsx.org/extension/kermanx/p2p-live-share
